--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>dropwizard-guicier</artifactId>
             <version>1.3.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>ca.mestevens.java</groupId>
+            <artifactId>typesafe-dropwizard-configuration</artifactId>
+            <version>1.2</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/ca.uhn.hapi.fhir/hapi-fhir-structures-r4 -->
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
