Submission test is now running correctly.
Apparently, Surefire only runs classes with Test in the name, so once that's added, everything works correctly.

A few more POM cleanups to address validation warnings.

--- a/dpc-web/pom.xml
+++ b/dpc-web/pom.xml
@@ -76,7 +76,7 @@
             <groupId>com.helger</groupId>
             <artifactId>ph-schematron</artifactId>
             <version>5.0.8</version>
-            <scope>testing</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
