--- a/dpc-web/pom.xml
+++ b/dpc-web/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>ca.mestevens.java</groupId>
             <artifactId>typesafe-dropwizard-configuration</artifactId>
-            <version>1.2</version>
+            <version>1.3-SNAPSHOT</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/ca.uhn.hapi.fhir/hapi-fhir-structures-r4 -->
         <dependency>
