--- a/dpc-web/pom.xml
+++ b/dpc-web/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <dropwizard.version>1.3.8</dropwizard.version>
         <hapi.fhir.version>3.6.0</hapi.fhir.version>
-        <mainClass>gov.cms.dpc.web.DPCAppApplication</mainClass>
+        <mainClass>gov.cms.dpc.web.DPCWebApplication</mainClass>
     </properties>
 
     <dependencyManagement>
