DPC-82: Initial commit of attribution module.
This is the early wiring of the Attribution engine. It’s currently designed to run in the same process as the host application, but will eventually be expanded to support running externally.

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>dpc-web</module>
         <module>dpc-queue</module>
+        <module>dpd-attribution</module>
     </modules>
 
     <groupId>gov.cms.dpc</groupId>
