--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <modules>
         <module>dpc-web</module>
         <module>dpc-queue</module>
-        <module>dpd-attribution</module>
+        <module>dpc-attribution</module>
     </modules>
 
     <groupId>gov.cms.dpc</groupId>
@@ -23,6 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <junit.jupiter.version>5.3.2</junit.jupiter.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <hapi.fhir.version>3.6.0</hapi.fhir.version>
         <java.version>11</java.version>
     </properties>
 
@@ -39,13 +40,35 @@
                 <version>${slf4j.version}</version>
             </dependency>
             <dependency>
+                <groupId>ca.uhn.hapi.fhir</groupId>
+                <artifactId>hapi-fhir-structures-r4</artifactId>
+                <version>${hapi.fhir.version}</version>
+            </dependency>
+            <!--Test dependencies-->
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
                 <version>${slf4j.version}</version>
                 <scope>test</scope>
             </dependency>
-
-
+            <dependency>
+                <groupId>ca.uhn.hapi.fhir</groupId>
+                <artifactId>hapi-fhir-validation-resources-r4</artifactId>
+                <version>${hapi.fhir.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.helger</groupId>
+                <artifactId>ph-schematron</artifactId>
+                <version>5.0.8</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>ca.uhn.hapi.fhir</groupId>
+                <artifactId>hapi-fhir-client</artifactId>
+                <version>${hapi.fhir.version}</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
