DPC-27: Aggregation engine is now wired into web service.
These really need to be detangled, but we can now submit jobs, work them, and get their status from the web api.

Next step is to load in some test BB resources and go from there.

--- a/dpc-web/pom.xml
+++ b/dpc-web/pom.xml
@@ -86,6 +86,18 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>gov.cms.dpc</groupId>
+            <artifactId>dpc-aggregation</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>gov.cms.dpc</groupId>
+            <artifactId>dpc-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
