Fix previous merge
Merging #1 resulted in a couple of errors.
The root pom wasn’t committed correctly and the Job URL was reverted.
Tested this fix and all tests are passing.

Also updated typesafe config library to the latest commit, which fixes an NPE when environment variables are missing.

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,9 @@
     <modules>
         <module>dpc-web</module>
         <module>dpc-queue</module>
+        <module>dpc-aggregation</module>
         <module>dpc-attribution</module>
+        <module>dpc-common</module>
     </modules>
 
     <groupId>gov.cms.dpc</groupId>
