DPC-86: Cleaned up integration testing of Exception handler
Finalized integration of the exception handler and reworked the tests to enable to us to actually verify that it works correctly.

The HAPI FHIR client hard crashes on errors, instead of returning the error and allows us to pick apart the Operation Outcome

--- a/dpc-web/pom.xml
+++ b/dpc-web/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>mockito-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.7</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-aggregation</artifactId>
             <version>1.0-SNAPSHOT</version>
