--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <dropwizard.version>1.3.8</dropwizard.version>
         <junit.jupiter.version>5.3.2</junit.jupiter.version>
         <slf4j.version>1.7.25</slf4j.version>
         <hapi.fhir.version>3.6.0</hapi.fhir.version>
@@ -31,6 +32,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-bom</artifactId>
+                <version>${dropwizard.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>com.google.inject</groupId>
                 <artifactId>guice</artifactId>
