--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,22 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!--No longer shipped with Java 11, so we need to include it manually-->
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>2.3.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.hubspot.dropwizard</groupId>
+                <artifactId>dropwizard-guicier</artifactId>
+                <version>1.3.5.1</version>
+            </dependency>
+            <dependency>
+                <groupId>ca.mestevens.java</groupId>
+                <artifactId>typesafe-dropwizard-configuration</artifactId>
+                <version>1.3-SNAPSHOT</version>
+            </dependency>
             <dependency>
                 <groupId>javax.ws.rs</groupId>
                 <artifactId>javax.ws.rs-api</artifactId>
