--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -55,6 +55,10 @@
             <artifactId>dpc-fhir</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-testing</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
