--- a/dpc-attribution/src/test/resources/application.conf
+++ b/dpc-attribution/src/test/resources/application.conf
@@ -2,7 +2,8 @@ testValue = "this is a test";
 
 database = {
   driverClass = org.h2.Driver
-  url = "jdbc:h2:mem:app_db;DB_CLOSE_ON_EXIT=FALSE"
+  url = "jdbc:h2:file:./h2/app_db;DB_CLOSE_ON_EXIT=FALSE"
+//  url = "jdbc:h2:mem:app_db;DB_CLOSE_ON_EXIT=FALSE"
 }
 
 server {
