DPC-91: Attribution engine is partially working as Dropwizard service
The Dropwizard wrapper is working, to the extent that we can get a list of associated beneficiaries for each provider.

--- a/dpc-attribution/src/test/resources/application.conf
+++ b/dpc-attribution/src/test/resources/application.conf
@@ -7,7 +7,7 @@ database = {
 }
 
 server {
-  registerDefaultExceptionMappers = false
+//  registerDefaultExceptionMappers = false
   applicationConnectors = [{
     type = http
     port = 3727
