--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
                 <artifactId>hapi-fhir-structures-r4</artifactId>
                 <version>${hapi.fhir.version}</version>
             </dependency>
+            <dependency>
+                <groupId>ca.uhn.hapi.fhir</groupId>
+                <artifactId>hapi-fhir-structures-dstu3</artifactId>
+                <version>${hapi.fhir.version}</version>
+            </dependency>
             <!--Test dependencies-->
             <dependency>
                 <groupId>org.slf4j</groupId>
