--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>h2</artifactId>
             <version>1.4.197</version>
         </dependency>
+        <!--This is required for Java 11 support. The version shipped with Hibernate is too old-->
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.24.1-GA</version>
+        </dependency>
         <!--No longer shipped with Java 11, so we need to include it manually-->
         <dependency>
             <groupId>javax.xml.bind</groupId>
@@ -59,6 +65,11 @@
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-common</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
         </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
