--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -48,12 +48,10 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.3</version>
         </dependency>
-        <!--Test Dependencies-->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${slf4j.version}</version>
-            <scope>test</scope>
+            <groupId>ca.mestevens.java</groupId>
+            <artifactId>typesafe-dropwizard-configuration</artifactId>
+            <version>1.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
