--- a/dpc-web/pom.xml
+++ b/dpc-web/pom.xml
@@ -140,6 +140,24 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <configuration>
+                    <to>
+                        <image>${project.artifactId}</image>
+                    </to>
+                    <container>
+                        <args>
+                            <arg>server</arg>
+                            <arg>${jib.container.appRoot}/resources/application.conf</arg>
+                        </args>
+                        <ports>
+                            <port>8080</port>
+                        </ports>
+                    </container>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
