--- a/dpc-web/pom.xml
+++ b/dpc-web/pom.xml
@@ -144,13 +144,16 @@
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
+                    <from>
+                        <image>openjdk:11-jdk-slim</image>
+                    </from>
                     <to>
                         <image>${project.artifactId}</image>
                     </to>
                     <container>
                         <args>
                             <arg>server</arg>
-                            <arg>${jib.container.appRoot}/resources/application.conf</arg>
+                            <!--<arg>${jib.container.appRoot}/resources/application.conf</arg>-->
                         </args>
                         <ports>
                             <port>8080</port>
