DPC-45: Cleaned up configuration injection for BBClient
The BlueButtonClient now takes an injected configuration, that way we can make use of our normal config resolution in Dropwizard.
For testing, we provide a config through the TestModule.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,6 @@ services:
     environment:
       - attributionURL=http://attribution:8080/v1/
       - logging.level=DEBUG
+      - aggregation.bbclient.keyStore.location=/bb.keystore
     depends_on:
       - attribution
