--- a/dpc-aggregation/src/main/resources/reference.conf
+++ b/dpc-aggregation/src/main/resources/reference.conf
@@ -2,6 +2,8 @@ aggregation.bbclient {
     keyStore {
         type = "JKS"
         defaultPassword = "changeit"
+        # Temporarily set relative to the execution directory
+        location = "../bbcerts/bb.keystore"
     }
 
     serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
