--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,6 @@
                 <groupId>ca.uhn.hapi.fhir</groupId>
                 <artifactId>hapi-fhir-client</artifactId>
                 <version>${hapi.fhir.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
@@ -152,7 +151,7 @@
                     <version>1.0.0</version>
                     <configuration>
                         <from>
-                            <image>openjdk:11-jre-slim</image>
+                            <image>openjdk:11-jdk-slim</image>
                         </from>
                     </configuration>
                     <executions>
