DPC-27: Export path is now an injected parameter
Instead of hardcoding the exportPath variable we now inject it with Guice, so we have the ability to provide it via a config file, or through another path.

--- a/dpc-aggregation/src/main/resources/reference.conf
+++ b/dpc-aggregation/src/main/resources/reference.conf
@@ -1,12 +1,12 @@
-aggregation.bbclient {
-    keyStore {
-        type = "JKS"
-        defaultPassword = "changeit"
-        # Temporarily set relative to the execution directory
-        location = "../bbcerts/bb.keystore"
-    }
+aggregation {
+      bbclient {
+          keyStore {
+              type = "JKS"
+              defaultPassword = "changeit"
+              # Temporarily set relative to the execution directory
+              location = "../bbcerts/bb.keystore"
+          }
 
-    serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
-}
-
-
+          serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
+      }
+  }
