DPC-109: Service URL is now injected into the application
We no longer have hardcoded hostname/port values, instead we grab them from the HTTP Request. The values are injected via Guice and custom annotations.

We also have an APIV1 annotation, which appends the /v1/ suffix to the base URL.

--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>dpc-common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
