DPC-109: Added shared Docker volume and improved documentation
The Docker compose script now creates a shared volume which can be used to pass data between the aggregation engine and the web api.

Added some Javadocs for the new annotations.
Expanded in base README to include build and test instructions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,5 +25,11 @@ services:
       - attributionURL=http://attribution:8080/v1/
       - logging.level=DEBUG
       - aggregation.bbclient.keyStore.location=/bb.keystore
+      - exportPath=/app/data
     depends_on:
       - attribution
+    volumes:
+      - export-volume:/app/data
+
+volumes:
+  export-volume:
