DPC-114: Fixed failing database loading
When running as a unified JAR, the database configuration was failing to load due to the wrong version of javassit being loaded. The solution was to move the dependency declaration to the root pom.

This also addresses DPC-96, and by ‘addresses’ I mean, we’re ignoring it. There’s some complex interaction going on that’s causing the database configuration to ‘fail’, but actually load. The solution, for now, is to simply catch the exception, make sure it’s ‘expected’ and if not, rethrow.

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
                 <artifactId>jaxb-api</artifactId>
                 <version>2.3.1</version>
             </dependency>
+            <!--This is required for Java 11 support. The version shipped with Hibernate is too old-->
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.24.1-GA</version>
+            </dependency>
             <dependency>
                 <groupId>com.hubspot.dropwizard</groupId>
                 <artifactId>dropwizard-guicier</artifactId>
