DPC-103: Initial migration of  public facing APIs from FHIR R4 to STU3
Everything is R3 now, all unit and integration tests are passing, except for the Capabilities statement, which has some breaking changes.

--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -23,7 +23,11 @@
         </dependency>
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
-            <artifactId>hapi-fhir-structures-r4</artifactId>
+            <artifactId>hapi-fhir-base</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-structures-dstu3</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.ws.rs</groupId>
