DPC-20: Roster resource is now attributing and returning correctly.
 Per DPC-128, the Roster resource is returning the Bundle back to the client. Ideally, we’d return a MethodOutcome, but that’s not working at this time.

The Integration Test is almost passing, pending a bug fix to the HAPI Library.

--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -76,6 +76,11 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/../src/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-shade-plugin</artifactId>
