DPC-83: Create mvp standalone aggregation service

--- a/dpc-aggregation/src/main/resources/reference.conf
+++ b/dpc-aggregation/src/main/resources/reference.conf
@@ -1,4 +1,4 @@
-aggregation {
+dpc.aggregation {
       bbclient {
           keyStore {
               type = "JKS"
@@ -7,4 +7,16 @@ aggregation {
 
           serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
       }
+
+      server {
+          registerDefaultExceptionMappers = false
+          applicationConnectors = [{
+            type = http
+            port = 3500
+          }]
+          adminConnectors =  [{
+            type = http
+            port = 9999
+          }]
+        }
   }
