--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>typesafe-dropwizard-configuration</artifactId>
             <version>1.3-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.hubspot.dropwizard</groupId>
+            <artifactId>dropwizard-guicier</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
