DPC-83: Add POC patient REST resource in aggregator

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,12 @@ services:
     ports:
       - "5432:5432"
 
+  aggregation:
+    image: dpc-aggregation
+    ports:
+      - "8081:8081"
+
+
   attribution:
     image: dpc-attribution
     depends_on:
