--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -29,13 +29,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>ca.uhn.hapi.fhir</groupId>
+            <groupId>${hapi.fhir.groupID}</groupId>
             <artifactId>hapi-fhir-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>ca.uhn.hapi.fhir</groupId>
+            <groupId>${hapi.fhir.groupID}</groupId>
             <artifactId>hapi-fhir-structures-dstu3</artifactId>
-            <version>${hapi.fhir.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -43,9 +42,8 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>ca.mestevens.java</groupId>
-            <artifactId>typesafe-dropwizard-configuration</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
         </dependency>
     </dependencies>
 
