DPC-20: Fixed failing tests due to missing configuration
When adding the maven dependencies plugin, we need to make sure we manually include the src/{main, test}/resources directory since it’s no longer resolved automatically.

--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -80,6 +80,9 @@
             <resource>
                 <directory>${project.basedir}/../src/resources</directory>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
         </resources>
         <plugins>
             <plugin>
