DPC-83: Run aggregation engine as managed dropwizard app

--- a/dpc-aggregation/src/main/resources/reference.conf
+++ b/dpc-aggregation/src/main/resources/reference.conf
@@ -3,6 +3,7 @@ dpc.aggregation {
           keyStore {
               type = "JKS"
               defaultPassword = "changeit"
+              location = "../bbcerts/bb.keystore"
           }
 
           serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
