DPC-83: Refactor exportPath into config file

--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -19,5 +19,7 @@ dpc.aggregation {
             type = http
             port = 9999
           }]
-        }
+      }
+
+      exportPath = "/tmp"
   }
