DPC-113: Renamed DPCWeb module to DPCAPI
Also started the renaming from application to service.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <modules>
-        <module>dpc-web</module>
+        <module>dpc-api</module>
         <module>dpc-queue</module>
         <module>dpc-aggregation</module>
         <module>dpc-attribution</module>
