--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dpc-api</artifactId>
+    <name>DPC Public API Service</name>
 
     <properties>
         <mainClass>gov.cms.dpc.api.DPCAPIService</mainClass>
