--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dpc-attribution</artifactId>
+    <name>DPC Provider Attribution Service</name>
 
     <properties>
         <mainClass>gov.cms.dpc.attribution.DPCAttributionService</mainClass>
