--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dpc-common</artifactId>
+    <name>DPC Common Libraries</name>
 
     <dependencies>
         <dependency>
