--- a/dpc-queue/pom.xml
+++ b/dpc-queue/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dpc-queue</artifactId>
+    <name>DPC Java Job Queue</name>
 
     <dependencies>
         <dependency>
