--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <version>0.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>DPCApp</name>
+    <name>DPC Application</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
