DPC-176: Use MockServer with at least one working test

--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -6,7 +6,8 @@ dpc.aggregation {
               location = "../bbcerts/bb.keystore"
           }
 
-          serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
+          //serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
+        serverBaseUrl = "http://localhost:1080/v1/fhir/"
       }
 
       server {
