--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -82,6 +82,18 @@
             <version>2.24.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mock-server/mockserver-core -->
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>3.10.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-client-java</artifactId>
+            <version>3.10.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
