DPC-176: Cleanup todos by using separate test config

--- a/dpc-aggregation/src/test/resources/test.application.conf
+++ b/dpc-aggregation/src/test/resources/test.application.conf
@@ -1,1 +1,29 @@
-dpc.aggregation.bbclient.serverBaseUrl = "http://localhost:1080/v1/fhir/"
+dpc.aggregation {
+      bbclient {
+          keyStore {
+              type = "JKS"
+              defaultPassword = "changeit"
+              location = "../bbcerts/bb.keystore"
+          }
+
+        serverBaseUrl = "http://localhost:1080/v1/fhir/"
+      }
+
+      server {
+          registerDefaultExceptionMappers = false
+          applicationConnectors = [{
+            type = http
+            port = 8080
+          }]
+          adminConnectors =  [{
+            type = http
+            port = 9999
+          }]
+      }
+
+      test  {
+        mockServerPort = 1080
+      }
+
+      exportPath = "/tmp"
+  }
