DPC-176: Mock BlueButton API to avoid test network dependency (#34)
* DPC-176: Do a trivial apache httpclient mocking

* DPC-176: Use MockServer with at least one working test

* DPC-176: Make all tests work with mockserver

* DPC-176: Stop logging so much

* DPC-176: Cleanup todos by using separate test config

* DPC-176: Use git-lfs to track test data

* DPC-176: Try to fix broken build

* DPC-176: Reformatting

* DPC-176: add docstring to mockserver configuration method

* DPC-176: rollback gitlfs

* DPC-176: bring back bb test data from lfs

* DPC-176: Cleanup pom

* DPC-176: Remove local conf and refactor constants

--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <mainClass>gov.cms.dpc.aggregation.DPCAggregationService</mainClass>
+        <mockserverVersion>3.10.8</mockserverVersion>
     </properties>
 
     <dependencies>
@@ -76,6 +77,22 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-testing</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mock-server/mockserver-core -->
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>${mockserverVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-client-java</artifactId>
+            <version>${mockserverVersion}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
