DPC-80: Refactored Hibernate configuration/injection into its own module.
We can now inject the SessionFactory and Sessions using a standalone module.
This module is now a part of dpc-common, so it should be easy to inject.

--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 dpc.attribution {
   database {
     driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://localhost:5432/dpc_attribution"
+    url = "jdbc:postgresql://localhost:5432/dpc-dev"
     user = postgres
   }
 
