DPC-80: Integration tests are passing in standalone mode
If we manually start the services and run them outside of Docker, everything passes correctly.

That means we need to clean up the configuration, which is a total disaster.

--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -1,25 +1,35 @@
 dpc.aggregation {
-      bbclient {
-          keyStore {
-              type = "JKS"
-              defaultPassword = "changeit"
-              location = "../bbcerts/bb.keystore"
-          }
+  bbclient {
+    keyStore {
+      type = "JKS"
+      defaultPassword = "changeit"
+      location = "../bbcerts/bb.keystore"
+    }
 
-          serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
-      }
-
-      server {
-          registerDefaultExceptionMappers = false
-          applicationConnectors = [{
-            type = http
-            port = 8080
-          }]
-          adminConnectors =  [{
-            type = http
-            port = 9999
-          }]
-      }
-
-      exportPath = "/tmp"
+    serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
   }
+
+  database {
+    driverClass = org.postgresql.Driver
+    url = "jdbc:postgresql://localhost:5432/dpc_attribution"
+    user = postgres
+    password = dpc-safe
+    properties = {
+      "hibernate.hbm2ddl.auto" = update
+    }
+  }
+
+  server {
+    registerDefaultExceptionMappers = false
+    applicationConnectors = [{
+      type = http
+      port = 8080
+    }]
+    adminConnectors = [{
+      type = http
+      port = 9999
+    }]
+  }
+
+  exportPath = "/tmp"
+}
