--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -18,3 +18,13 @@ httpClient {
   timeout: 5s
   connectionRequestTimeout: 5s
 }
+
+database {
+  driverClass = org.postgresql.Driver
+  url = "jdbc:postgresql://localhost:5432/dpc_attribution"
+  user = postgres
+  password = dpc-safe
+  properties = {
+    "hibernate.hbm2ddl.auto" = update
+  }
+}
