--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,18 +18,21 @@ services:
   aggregation:
     image: dpc-aggregation
     ports:
-      - "8081:8081"
+      - "8088:8081"
     environment:
       - ENV=dev
-
+    depends_on:
+      - db
 
   attribution:
     image: dpc-attribution
     depends_on:
       - db
     environment:
-      - SEED=true
+      - SEED=false
       - ENV=dev
+    ports:
+      - "3500:8080"
 
   web:
     image: dpc-web
