--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -1,2 +1,13 @@
 # Override the keystore location to point to correct location when run within docker "dev" environment
-dpc.aggregation.bbclient.keyStore.location = "/bb.keystore"
+dpc.aggregation {
+  database {
+    driverClass = org.postgresql.Driver
+    url = "jdbc:postgresql://db:5432/dpc_attribution"
+    user = postgres
+    password = dpc-safe
+    properties = {
+      "hibernate.hbm2ddl.auto" = update
+    }
+  }
+  bbclient.keyStore.location = "/bb.keystore"
+}
