DPC-80: Queue Module is more tightly integrated with the configs
Each service can now configure its own redis connections.

The process so far is incredibly messy, but hopefully we’ll get there soon.

--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -10,4 +10,10 @@ dpc.aggregation {
     }
   }
   bbclient.keyStore.location = "/bb.keystore"
+  queue {
+    singleServerConfig {
+      address = "redis://redis:6379"
+    }
+  }
+  exportPath = "/app/data"
 }
