--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -19,6 +19,12 @@ httpClient {
   connectionRequestTimeout: 5s
 }
 
+queue {
+  singleServerConfig {
+    address = "redis://localhost:6379"
+  }
+}
+
 database {
   driverClass = org.postgresql.Driver
   url = "jdbc:postgresql://localhost:5432/dpc_attribution"
